unpackaged/main/default/objects/Business_Development_Activity__c/fields/Total_Eligible_Account_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Total_Eligible_Account_Receivables__c</fullName>
    <label>Total Eligible Account Receivables</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>