unpackaged/main/default/objects/Business_Development_Activity__c/fields/Training_Notes__c.field-meta.xml
<CustomField>
    <fullName>Training_Notes__c</fullName>
    <label>Training Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>