unpackaged/main/default/objects/Business_Development_Activity__c/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>