unpackaged/main/default/objects/Business_Development_Activity__c/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>utm_content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>