unpackaged/main/default/objects/Business_Development_Activity__c/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>utm_medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>