unpackaged/main/default/objects/Business_Development_Activity__c/fields/X1_x_1__c.field-meta.xml
<CustomField>
    <fullName>X1_x_1__c</fullName>
    <label>1 x 1</label>
    <type>Date</type>
</CustomField>