unpackaged/main/default/objects/Business_Development_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Biz_Dev_Customer_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Location__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>