unpackaged/main/default/objects/Business_Development_Activity__c/listViews/Biz_Dev_Business_Development_Activity.listView-meta.xml
<ListView>
    <fullName>Biz_Dev_Business_Development_Activity</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Biz_Dev_Customer_Type__c</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Thomas Franz</value>
    </filters>
    <label>Biz Dev</label>
    <queue>Biz_Dev</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>