unpackaged/main/default/objects/Business_Development_Activity__c/listViews/Retention_BDA_s1.listView-meta.xml
<ListView>
    <fullName>Retention_BDA_s1</fullName>
    <columns>NAME</columns>
    <columns>Company_Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Phone__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Arizona</value>
    </filters>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>Digital Marketing</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2021 12:00 AM</value>
    </filters>
    <label>AZ Paid Leads</label>
</ListView>